CocacolaProjectBackUp07/src/objects/Financial_Constant__c.object
<CustomObject>
    <fields>
        <fullName>Tax_Rate__c</fullName>
        <label>Tax Rate (%)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>WACC__c</fullName>
        <label>WACC (%)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>isActive__c</fullName>
        <defaultValue>true</defaultValue>
        <label>isActive</label>
        <type>Checkbox</type>
    </fields>
    <label>Financial Constant</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Tax_Rate__c</columns>
        <columns>WACC__c</columns>
        <columns>isActive__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>ja</language>
    </listViews>
    <nameField>
        <displayFormat>TAX-{YYYY}{MM}-{0}</displayFormat>
        <label>Financial Constant Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Financial Constants</pluralLabel>
    <recordTypes>
        <fullName>Tax_Rate</fullName>
        <active>true</active>
        <label>Tax Rate</label>
    </recordTypes>
    <recordTypes>
        <fullName>WACC</fullName>
        <active>true</active>
        <label>WACC</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>